sketch of file structure + cmakelists

--- a/radar_control/lib/CMakeLists.txt
+++ b/radar_control/lib/CMakeLists.txt
@@ -1,12 +1,11 @@
-set(RC_LIB_NAME radar_control_lib)
-
 set(RC_LIB_HEADERS
-    test.h
+    data.h
+    radar_controller.h
 )
 
 set(RC_LIB_SOURCES
-    test.cpp
+    radar_controller.cpp
 )
 
-add_library(${RC_LIB_NAME} STATIC ${RC_LIB_HEADERS} ${RC_LIB_SOURCES})
-target_sources(${RC_LIB_NAME} PUBLIC ${RC_LIB_HEADERS} ${RC_LIB_SOURCES})
+add_library(radar_control_lib STATIC ${RC_LIB_HEADERS} ${RC_LIB_SOURCES})
+target_sources(radar_control_lib PUBLIC ${RC_LIB_HEADERS} ${RC_LIB_SOURCES})
