--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ project(RadarControl)
 add_subdirectory(radar_control/bin)
 add_subdirectory(radar_control/lib)
 add_subdirectory(tools/bin)
+add_subdirectory(tools/simulator)
+add_subdirectory(tools/visualizer)
