--- a/radar_control/lib/CMakeLists.txt
+++ b/radar_control/lib/CMakeLists.txt
@@ -9,3 +9,5 @@ set(RC_LIB_SOURCES
 
 add_library(radar_control_lib STATIC ${RC_LIB_HEADERS} ${RC_LIB_SOURCES})
 target_sources(radar_control_lib PUBLIC ${RC_LIB_HEADERS} ${RC_LIB_SOURCES})
+
+target_link_libraries(radar_control_lib PRIVATE util_lib)
