--- a/tools/simulator/CMakeLists.txt
+++ b/tools/simulator/CMakeLists.txt
@@ -10,4 +10,4 @@ add_library(simulator_lib STATIC ${SIM_LIB_HEADERS} ${SIM_LIB_SOURCES})
 target_sources(simulator_lib PUBLIC ${SIM_LIB_HEADERS} ${SIM_LIB_SOURCES})
 
 target_include_directories(simulator_lib PRIVATE ${CMAKE_SOURCE_DIR})
-target_link_libraries(simulator_lib PRIVATE radar_control_lib)
+target_link_libraries(simulator_lib PRIVATE radar_control_lib util_lib)
