--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(radar_control/lib)
 add_subdirectory(tools/bin)
 add_subdirectory(tools/simulator)
 add_subdirectory(tools/visualizer)
+add_subdirectory(util)
