--- a/tools/bin/CMakeLists.txt
+++ b/tools/bin/CMakeLists.txt
@@ -9,4 +9,4 @@ add_executable(${TOOLS_PROJECT_NAME} ${TOOLS_BIN_SOURCES})
 
 target_include_directories(${TOOLS_PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/tools)
 
-target_link_libraries(${TOOLS_PROJECT_NAME} PRIVATE radar_control_lib simulator_lib visualizer_lib)
+target_link_libraries(${TOOLS_PROJECT_NAME} PRIVATE radar_control_lib simulator_lib visualizer_lib util_lib)
