--- a/tools/visualizer/CMakeLists.txt
+++ b/tools/visualizer/CMakeLists.txt
@@ -12,4 +12,4 @@ add_library(visualizer_lib STATIC ${VIS_LIB_HEADERS} ${VIS_LIB_SOURCES})
 target_sources(visualizer_lib PUBLIC ${VIS_LIB_HEADERS} ${VIS_LIB_SOURCES})
 
 target_include_directories(visualizer_lib PRIVATE ${CMAKE_SOURCE_DIR})
-target_link_libraries(visualizer_lib PRIVATE radar_control_lib sfml-system sfml-graphics)
+target_link_libraries(visualizer_lib PRIVATE sfml-system sfml-graphics radar_control_lib util_lib)
