move to protobufs

--- a/tools/bin/CMakeLists.txt
+++ b/tools/bin/CMakeLists.txt
@@ -1,12 +1,10 @@
-set(TOOLS_PROJECT_NAME "Tools")
-project(${TOOLS_PROJECT_NAME})
+set(TOOLS_EXEC_NAME "Tools")
 
 set(TOOLS_BIN_SOURCES
     main.cpp
 )
 
-add_executable(${TOOLS_PROJECT_NAME} ${TOOLS_BIN_SOURCES})
+add_executable(${TOOLS_EXEC_NAME} ${TOOLS_BIN_SOURCES})
 
-target_include_directories(${TOOLS_PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/tools)
-
-target_link_libraries(${TOOLS_PROJECT_NAME} PRIVATE radar_control_lib simulator_lib visualizer_lib util_lib)
+target_include_directories(${TOOLS_EXEC_NAME} PRIVATE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/tools)
+target_link_libraries(${TOOLS_EXEC_NAME} PRIVATE radar_control_lib simulator_lib visualizer_lib util_lib)
