remove SFML + move to flatbuffers instead of protobuffers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 project(RadarControl)
 
-add_subdirectory(proto)
+add_subdirectory(flat)
 add_subdirectory(radar_control/bin)
 add_subdirectory(radar_control/lib)
 add_subdirectory(tools/bin)
