--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(flat)
 add_subdirectory(radar_control/bin)
 add_subdirectory(radar_control/lib)
 add_subdirectory(tools/bin)
+add_subdirectory(tools/defense)
 add_subdirectory(tools/simulator)
 add_subdirectory(tools/visualizer)
 add_subdirectory(util)
