not working, idk why

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(RadarControl)
 add_subdirectory(flat)
 add_subdirectory(radar_control/bin)
 add_subdirectory(radar_control/lib)
+add_subdirectory(radar_control/radar_controller)
 add_subdirectory(tools/bin)
 add_subdirectory(tools/defense)
 add_subdirectory(tools/simulator)
