flatbuf -> protobuf + now full static linking

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,12 +1,11 @@
 set(UTIL_HEADERS
-    flat.h
+    proto.h
     timer.h
     points.h
     util.h
 )
 
 set(UTIL_SOURCES
-    flat.cpp
     points.cpp
     util.cpp
 )
@@ -14,4 +13,4 @@ set(UTIL_SOURCES
 add_library(util_lib STATIC ${UTIL_HEADERS} ${UTIL_SOURCES})
 
 target_include_directories(util_lib PRIVATE ${CMAKE_SOURCE_DIR})
-target_link_libraries(util_lib PRIVATE flatbuf_lib)
+target_link_libraries(util_lib PRIVATE proto_lib)
