add correct angle calculation for 1 target with tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory(tools/bin)
 add_subdirectory(tools/defense)
 add_subdirectory(tools/simulator)
 add_subdirectory(tools/visualizer)
+add_subdirectory(ut)
 add_subdirectory(util)
