--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ add_subdirectory(tools/bin)
 add_subdirectory(tools/defense)
 add_subdirectory(tools/simulator)
 add_subdirectory(tools/visualizer)
-add_subdirectory(ut)
+# add_subdirectory(ut)
 add_subdirectory(util)
