--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,10 @@ add_subdirectory(proto)
 add_subdirectory(radar_control/bin)
 add_subdirectory(radar_control/lib)
 add_subdirectory(radar_control/radar_controller)
-add_subdirectory(tools/bin)
-add_subdirectory(tools/defense)
-add_subdirectory(tools/simulator)
-add_subdirectory(tools/visualizer)
+# add_subdirectory(tools/bin)
+# add_subdirectory(tools/defense)
+# add_subdirectory(tools/simulator)
+# add_subdirectory(tools/visualizer)
+add_subdirectory(simulator)
 add_subdirectory(ut)
 add_subdirectory(util)
